Java pre-project. Задача 2.2.2